[project]
name = "modeling-metastatic-spread"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "pandas>=2.3.3",
    "pyqt6>=6.10.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
